--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 group=com.sbr.api.rest
 description=employee-info-microservice
 version=1.0.0
+spockFrameWorkVersion=1.1-groovy-2.4
+jaccocoVersion=0.8.6
 springBootVersion=2.3.2.RELEASE
 micrometer=1.5.1
 oauth2Version=2.1.0.RELEASE
