--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,13 @@ micrometer=1.5.1
 oauth2Version=2.1.0.RELEASE
 org.gradle.jvmargs=-Xmx2g -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 gradleWrapperUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+
+#Sonarqube Configuration
+systemProp.sonar.sourceEncoding=UTF-8
+systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.login.username=admin
+systemProp.sonar.login.password=testadmin
+systemProp.sonar.dynamicAnalysis=resueReports
+systemProp.sonar.java.coveragePlugin=jacoco
+##systemProp.sonar.sources=src
+
